Fixed some bad alignment

--- a/mobile/css/index.css
+++ b/mobile/css/index.css
@@ -93,16 +93,12 @@ body {
 }
 
 
-.arsenal-div .wrapper {
-    padding: 40px;
-
-}
-
 .arsenal-card {
     width: 300px;
     height: 300px;
     margin-top: 40px;
     margin-bottom: 40px;
+    margin: 0 auto;
 }
 
 .arsenal-card .imgdiv {
@@ -264,7 +260,8 @@ body {
 
 .aboutme {
     padding-top: 70px;
-    padding: 40px;
+    margin: 0 auto;
+    width: 300px;
 }
 
 
